test/type-error-2.err.expect
test/type-error-2.ktn:3:1: error: expected scalar type int but got [t1]
test/type-error-2.ktn:4:12: note: [t1] (output of __add_vector) is from here
test/type-error-2.ktn:3:9: note: int (from baz) is from here

test/type-error-2.ktn:3:1: error: expected stack type s2... int but got s1... [t1]

test/type-error-2.ktn:3:1: error: expected scalar type (s2... [t2] [char] -> s2... int) but got (s1... [t1] t1 -> s1... [t1])
test/type-error-2.ktn:3:31: note: (s1... [t1] t1 -> s1... [t1]) is from here
test/type-error-2.ktn:4:12: note: [t1] (input to __add_vector) is from here
test/type-error-2.ktn:4:12: note: t1 (type of x) is from here
test/type-error-2.ktn:3:9: note: (s2... [t2] [char] -> s2... int) is from here
test/type-error-2.ktn:3:9: note: [t2] (input to baz) is from here
test/type-error-2.ktn:3:9: note: [char] (input to baz) is from here
